// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UrlPreviewGroupViewModel > should deduplicate multiple versions of the same URL 1`] = `
{
  "overPreviewLimit": false,
  "previews": [
    {
      "matched_url": "https://example.org",
      "og:description": "This is a description",
      "og:site_name": "Example.org",
      "og:title": "This is an example!",
      "og:type": "document",
      "og:url": "https://example.org",
    },
  ],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel > should handle being hidden and shown by the user 1`] = `
{
  "overPreviewLimit": false,
  "previews": [],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel > should handle being hidden and shown by the user 2`] = `
{
  "overPreviewLimit": false,
  "previews": [
    {
      "matched_url": "https://example.org",
      "og:description": "This is a description",
      "og:site_name": "Example.org",
      "og:title": "This is an example!",
      "og:type": "document",
      "og:url": "https://example.org",
    },
  ],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel > should hide preview when invisible 1`] = `
{
  "overPreviewLimit": false,
  "previews": [],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel > should ignore failed previews 1`] = `
{
  "overPreviewLimit": false,
  "previews": [],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel > should not resolve media, which is left to the view 1`] = `
{
  "overPreviewLimit": false,
  "previews": [
    {
      "matched_url": "https://example.org",
      "matrix:image:size": 10000,
      "og:image": "mxc://example.org/abc",
      "og:image:height": 128,
      "og:image:width": 128,
      "og:title": "This is an example!",
      "og:type": "document",
      "og:url": "https://example.org",
    },
  ],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel > should preview a single valid URL 1`] = `
{
  "overPreviewLimit": false,
  "previews": [
    {
      "matched_url": "https://example.org",
      "og:description": "This is a description",
      "og:site_name": "Example.org",
      "og:title": "This is an example!",
      "og:type": "document",
      "og:url": "https://example.org",
    },
  ],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel > should return no previews by default 1`] = `
{
  "overPreviewLimit": false,
  "previews": [],
  "previewsLimited": true,
  "totalPreviewCount": 0,
}
`;
